user story #1210096: upgrade plugin to jdk11